[Notifications] - add missing env vars to FE build

--- a/packages/apps/spaces/Dockerfile
+++ b/packages/apps/spaces/Dockerfile
@@ -10,12 +10,24 @@ COPY package.json yarn.lock* ./
 RUN mkdir ./scripts
 COPY scripts/. ./scripts/.
 ARG GITHUB_ACTIONS=GITHUB_ACTIONS
+
+# Set ENV vars needed during build and run time related to notifications
+ARG NEXT_PUBLIC_NOTIFICATION_URL
+ENV NEXT_PUBLIC_NOTIFICATION_URL ${NEXT_PUBLIC_NOTIFICATION_URL}
+
+ARG NEXT_PUBLIC_NOTIFICATION_PROD_APP_IDENTIFIER
+ENV NEXT_PUBLIC_NOTIFICATION_PROD_APP_IDENTIFIER ${NEXT_PUBLIC_NOTIFICATION_PROD_APP_IDENTIFIER}
+
+ARG NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER
+ENV NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER ${NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER}
+
 RUN yarn install --frozen-lockfile
 
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+
 
 RUN yarn build
 
