--- a/.github/workflows/build-spaces.yml
+++ b/.github/workflows/build-spaces.yml
@@ -90,3 +90,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           build-args: |
             ENV=cluster
+            "NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER=${{ secrets.NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER }}"
+            "NEXT_PUBLIC_NOTIFICATION_PROD_APP_IDENTIFIER=${{ secrets.NEXT_PUBLIC_NOTIFICATION_PROD_APP_IDENTIFIER }}"
+            "NEXT_PUBLIC_NOTIFICATION_URL=${{ secrets.NEXT_PUBLIC_NOTIFICATION_URL }}"
+            
