[Frontend] add env vars to env file in docker build

--- a/packages/apps/spaces/Dockerfile
+++ b/packages/apps/spaces/Dockerfile
@@ -21,6 +21,10 @@ ENV NEXT_PUBLIC_NOTIFICATION_PROD_APP_IDENTIFIER ${NEXT_PUBLIC_NOTIFICATION_PROD
 ARG NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER
 ENV NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER ${NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER}
 
+RUN echo "NEXT_PUBLIC_NOTIFICATION_URL=${NEXT_PUBLIC_NOTIFICATION_URL}" >> .env
+RUN echo "NEXT_PUBLIC_NOTIFICATION_PROD_APP_IDENTIFIER=${NEXT_PUBLIC_NOTIFICATION_PROD_APP_IDENTIFIER}" >> .env
+RUN echo "NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER=${NEXT_PUBLIC_NOTIFICATION_TEST_APP_IDENTIFIER}" >> .env
+
 RUN yarn install --frozen-lockfile
 
 FROM base AS builder
