feat: list master-plans in settings view

--- a/packages/apps/spaces/tsconfig.json
+++ b/packages/apps/spaces/tsconfig.json
@@ -29,6 +29,7 @@
       "@organization/*": ["app/organization/[id]/*"],
       "@organizations/*": ["app/organizations/src/*"],
       "@customerMap/*": ["app/customer-map/src/*"],
+      "@settings/*": ["app/settings/src/*"]
     },
     "plugins": [
       {
