--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -65,6 +65,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "7.47.0",
     "react-inverted-form": "^1.2.13",
+    "react-lottie": "^1.2.4",
     "react-markdown": "^9.0.0",
     "react-textarea-autosize": "^8.5.2",
     "react-toastify": "^9.1.1",
@@ -98,6 +99,7 @@
     "@types/node": "17.0.4",
     "@types/react": "18.0.28",
     "@types/react-dom": "^18.0.10",
+    "@types/react-lottie": "^1.2.10",
     "@types/sanitize-html": "^2.8.0",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "env-cmd": "^10.1.0",
