--- a/packages/apps/spaces/tsconfig.json
+++ b/packages/apps/spaces/tsconfig.json
@@ -28,6 +28,7 @@
       "@graphql/types": ["app/src/types/__generated__/graphql.types.ts"],
       "@organization/*": ["app/organization/[id]/*"],
       "@organizations/*": ["app/organizations/src/*"],
+      "@renewals/*": ["app/renewals/src/*"],
       "@customerMap/*": ["app/customer-map/src/*"],
       "@settings/*": ["app/settings/src/*"]
     },
