--- a/packages/server/events-processing-platform/.env
+++ b/packages/server/events-processing-platform/.env
@@ -57,6 +57,10 @@ NEO4J_LOG_LEVEL: INFO
 
 VALIDATION_API: http://localhost:10003
 VALIDATION_API_KEY: d02520f5-7705-4b73-9510-a7c9507e695e
+
+FILE_STORE_API: http://localhost:10001
+FILE_STORE_API_KEY: 9eb87aa2-75e7-45b2-a1e6-53ed297d0ba8
+
 EVENTS_PROCESSING_PLATFORM_URL=localhost:5001
 EVENTS_PROCESSING_PLATFORM_API_KEY=082c1193-a5a2-42fc-87fc-e960e692fffd
 
