--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -21,6 +21,8 @@
   "dependencies": {
     "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.7.1",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@growthbook/growthbook-react": "^0.21.0",
@@ -72,6 +74,7 @@
     "react-virtuoso": "4.5.1",
     "recoil": "^0.7.6",
     "remirror": "^2.0.36",
+    "rooks": "^7.14.1",
     "rxjs": "^7.8.1",
     "sanitize-html": "^2.9.0",
     "sass": "^1.69.5",
