enable batch job

--- a/packages/runner/customer-os-data-upkeeper/.env
+++ b/packages/runner/customer-os-data-upkeeper/.env
@@ -34,7 +34,7 @@ EVENTS_PROCESSING_PLATFORM_URL=localhost:5001
 EVENTS_PROCESSING_PLATFORM_ENABLED=true
 EVENTS_PROCESSING_PLATFORM_API_KEY=082c1193-a5a2-42fc-87fc-e960e692fffd
 
-CRON_SCHEDULE_UPDATE_CONTRACT: "5,35 * * * * *"
-CRON_SCHEDULE_WEB_SCRAPE_ORGANIZATION: "15 * * * * *"
+CRON_SCHEDULE_UPDATE_CONTRACT: "0 30 * * * *"
+CRON_SCHEDULE_WEB_SCRAPE_ORGANIZATION: "0 0 1 * * *"
 WEB_SCRAPED_ORGANIZATIONS_PER_CYCLE: 2
-CRON_SCHEDULE_GENERATE_INVOICE: "0 0 8 * * *"
+CRON_SCHEDULE_GENERATE_INVOICE: "0 15 8 * * *"
