Paid invoice email notification

--- a/packages/server/events-processing-platform/.env
+++ b/packages/server/events-processing-platform/.env
@@ -125,3 +125,5 @@ SCRAPE_DATA_PROMPT:' The following is data scraped from a website:  Please combi
 
 ANTHROPIC_API: https://anthropic.openline.ai
 ANTHROPIC_API_KEY: SOME_API_KEY
+
+POSTMARK_API_KEY:
