--- a/.github/workflows/build-spaces.yml
+++ b/.github/workflows/build-spaces.yml
@@ -25,6 +25,9 @@ jobs:
   build-publish:
     runs-on: ubuntu-latest
     steps:
+      - name: Delete huge unnecessary tools folder
+        run: rm -rf /opt/hostedtoolcache
+
       - name: Checkout
         uses: actions/checkout@v4
 
