--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -25,6 +25,7 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@files-ui/react": "^1.2.4",
     "@growthbook/growthbook-react": "^0.21.0",
     "@highlight-run/next": "^7.0.1",
     "@integration-app/react": "^0.2.1",
@@ -42,11 +43,14 @@
     "axios": "^1.6.3",
     "bufferutil": "^4.0.8",
     "chakra-react-select": "^4.7.6",
+    "compressorjs": "^1.2.1",
     "d3": "^7.8.5",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
     "dotenv": "^16.0.3",
     "encoding": "^0.1.13",
+    "filepond": "^4.30.6",
+    "filepond-plugin-image-preview": "^4.6.12",
     "framer-motion": "^10.16.16",
     "fuse.js": "^6.6.2",
     "graphql": "^16.8.1",
@@ -66,6 +70,7 @@
     "react-date-picker": "^10.0.3",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-filepond": "^7.1.2",
     "react-hook-form": "7.47.0",
     "react-imask": "^7.4.0",
     "react-inverted-form": "^1.2.13",
