--- a/.github/workflows/build-file-store-api.yml
+++ b/.github/workflows/build-file-store-api.yml
@@ -40,6 +40,7 @@ jobs:
           go-version: stable
 
       - name: Build
+        working-directory: ./packages/server/file-store-api
         run: make all
 
       - name: Configure Test Folders
@@ -49,7 +50,9 @@ jobs:
           echo "test_folders=$test_folders" >> $GITHUB_OUTPUT
 
       - name: Test
-        run: gotestsum --junitfile unit-tests.xml -- -coverprofile=cover.out -coverpkg=${{ steps.test-folders.outputs.test_folders }} ./...
+        run: |
+          go install gotest.tools/gotestsum@latest
+          run: gotestsum --junitfile unit-tests.xml -- -coverprofile=cover.out -coverpkg=${{ steps.test-folders.outputs.test_folders }} ./...
 
       - name: Test Report
         uses: mikepenz/action-junit-report@v4
