--- a/.github/workflows/build-file-store-api.yml
+++ b/.github/workflows/build-file-store-api.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Test
         run: |
           go install gotest.tools/gotestsum@latest
-          run: gotestsum --junitfile unit-tests.xml -- -coverprofile=cover.out -coverpkg=${{ steps.test-folders.outputs.test_folders }} ./...
+          gotestsum --junitfile unit-tests.xml -- -coverprofile=cover.out -coverpkg=${{ steps.test-folders.outputs.test_folders }} ./...
 
       - name: Test Report
         uses: mikepenz/action-junit-report@v4
