--- a/.github/workflows/build-file-store-api.yml
+++ b/.github/workflows/build-file-store-api.yml
@@ -50,9 +50,7 @@ jobs:
           echo "test_folders=$test_folders" >> $GITHUB_OUTPUT
 
       - name: Test
-        run: |
-          go install gotest.tools/gotestsum@latest
-          gotestsum --junitfile unit-tests.xml -- -coverpkg=${{ steps.test-folders.outputs.test_folders }} ./...
+        run: gotestsum --junitfile unit-tests.xml ./...
 
       - name: Test Report
         uses: mikepenz/action-junit-report@v4
