--- a/.github/workflows/build-file-store-api.yml
+++ b/.github/workflows/build-file-store-api.yml
@@ -6,12 +6,12 @@ on:
     paths:
       - packages/server/customer-os-common-module/**
       - packages/server/file-store-api/**
-      - .github/workflows/build-filestore-api.yml
+      - .github/workflows/build-file-store-api.yml
   pull_request:
     paths:
       - packages/server/customer-os-common-module/**
       - packages/server/file-store-api/**
-      - .github/workflows/build-filestore-api.yml
+      - .github/workflows/build-file-store-api.yml
   release:
     types: [ created, edited ]
 
@@ -47,10 +47,10 @@ jobs:
         id: test-folders
         run: |
           test_folders=$(go list ./... | grep -v /gen | grep -v /test | paste -sd "," -)
-          echo "test_folders=$test_folders" >> $GITHUB_OUTPUT
+          echo "{name}={test_folders}" >> $GITHUB_OUTPUT
 
       - name: Test
-        run: gotestsum --junitfile unit-tests.xml ./...
+        run: gotestsum --junitfile unit-tests.xml -- -coverprofile=cover.out -coverpkg=${{ steps.test-folders.outputs.test_folders }} ./...
 
       - name: Test Report
         uses: mikepenz/action-junit-report@v4
