--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -64,6 +64,7 @@
     "next-pwa": "^5.6.0",
     "react": "^18.2.0",
     "react-date-picker": "^10.0.3",
+    "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.47.0",
     "react-inverted-form": "^1.2.13",
@@ -101,6 +102,7 @@
     "@types/next": "9.0.0",
     "@types/node": "17.0.4",
     "@types/react": "18.0.28",
+    "@types/react-datepicker": "^4.19.6",
     "@types/react-dom": "^18.0.10",
     "@types/react-lottie": "^1.2.10",
     "@types/sanitize-html": "^2.8.0",
