--- a/.github/workflows/build-customer-os-realtime.yml
+++ b/.github/workflows/build-customer-os-realtime.yml
@@ -45,17 +45,17 @@ jobs:
               with:
                 elixir-version: ${{ matrix.elixir }}
                 otp-version: ${{ matrix.otp }}
-            - name: Retrieve cached dependencies
-              uses: actions/cache@v2
-              id: mix-cache
-              with:
-                path: |
-                    deps
-                    _build
-                    priv/plts
-                key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('mix.lock') }}
+            # - name: Retrieve cached dependencies
+            #   uses: actions/cache@v2
+            #   id: mix-cache
+            #   with:
+            #     path: |
+            #         deps
+            #         _build
+            #         priv/plts
+            #     key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('mix.lock') }}
             - name: Install dependencies
-              if: steps.mix-cache.outputs.cache-hit != 'true'
+              # if: steps.mix-cache.outputs.cache-hit != 'true'
               run: |
                 mkdir -p priv/plts
                 mix local.rebar --force
@@ -92,6 +92,14 @@ jobs:
                 _build
                 priv/plts
             key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('mix.lock') }}
+        - name: Install dependencies
+          if: steps.mix-cache.outputs.cache-hit != 'true'
+          run: |
+              mkdir -p priv/plts
+              mix local.rebar --force
+              mix local.hex --force
+              mix deps.get
+              mix deps.compile
         - run: mix format --check-formatted
         - run: mix credo
         - run: mix dialyzer --no-check --ignore-exit-status
@@ -131,6 +139,14 @@ jobs:
                 _build
                 priv/plts
             key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('mix.lock') }}
+        - name: Install dependencies
+          if: steps.mix-cache.outputs.cache-hit != 'true'
+          run: |
+            mkdir -p priv/plts
+            mix local.rebar --force
+            mix local.hex --force
+            mix deps.get
+            mix deps.compile
         - run: mix test --trace --slowest 10
     build-publish:
         needs:
