--- a/.github/workflows/build-customer-os-realtime.yml
+++ b/.github/workflows/build-customer-os-realtime.yml
@@ -45,17 +45,17 @@ jobs:
               with:
                 elixir-version: ${{ matrix.elixir }}
                 otp-version: ${{ matrix.otp }}
-            # - name: Retrieve cached dependencies
-            #   uses: actions/cache@v2
-            #   id: mix-cache
-            #   with:
-            #     path: |
-            #         deps
-            #         _build
-            #         priv/plts
-            #     key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-${{ hashFiles('mix.lock') }}
+            - name: Retrieve cached dependencies
+              uses: actions/cache@v2
+              id: mix-cache
+              with:
+                path: |
+                    deps
+                    _build
+                    priv/plts
+                key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-phoenix-${{ hashFiles('mix.lock') }}
             - name: Install dependencies
-              # if: steps.mix-cache.outputs.cache-hit != 'true'
+              if: steps.mix-cache.outputs.cache-hit != 'true'
               run: |
                 mkdir -p priv/plts
                 mix local.rebar --force
@@ -91,7 +91,7 @@ jobs:
                 deps
                 _build
                 priv/plts
-            key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-invalid-${{ hashFiles('mix.lock') }}
+            key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-phoenix-${{ hashFiles('mix.lock') }}
         - name: Install dependencies
           if: steps.mix-cache.outputs.cache-hit != 'true'
           run: |
@@ -138,7 +138,7 @@ jobs:
                 deps
                 _build
                 priv/plts
-            key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-invalid-${{ hashFiles('mix.lock') }}
+            key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-phoenix-${{ hashFiles('mix.lock') }}
         - name: Install dependencies
           if: steps.mix-cache.outputs.cache-hit != 'true'
           run: |
