--- a/.github/workflows/build-customer-os-realtime.yml
+++ b/.github/workflows/build-customer-os-realtime.yml
@@ -27,45 +27,45 @@ defaults:
     working-directory: ./packages/server/customer_os_realtime
     
 jobs:
-    dependencies:
-        runs-on: ubuntu-latest
-        strategy:
-          matrix:
-            elixir: ['1.16.1']
-            otp: ['26.2.1']
-        steps:
-            - name: Cancel previous runs
-              uses: styfle/cancel-workflow-action@0.9.0
-              with:
-                access_token: ${{ github.token }}
-            - name: Checkout Github repo
-              uses: actions/checkout@v4
-            - name: Sets up an Erlang/OTP environment
-              uses: erlef/setup-beam@v1
-              with:
-                elixir-version: ${{ matrix.elixir }}
-                otp-version: ${{ matrix.otp }}
-            # - name: Retrieve cached dependencies
-            #   uses: actions/cache@v2
-            #   id: mix-cache
-            #   with:
-            #     path: |
-            #         deps
-            #         _build
-            #         priv/plts
-            #     key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-phoenix-${{ hashFiles('mix.lock') }}
-            - name: Install dependencies
-              # if: steps.mix-cache.outputs.cache-hit != 'true'
-              run: |
-                mkdir -p priv/plts
-                mix local.rebar --force
-                mix local.hex --force
-                mix deps.get
-                mix deps.compile
-                mix dialyzer --plt
+    # dependencies:
+    #     runs-on: ubuntu-latest
+    #     strategy:
+    #       matrix:
+    #         elixir: ['1.16.1']
+    #         otp: ['26.2.1']
+    #     steps:
+    #         - name: Cancel previous runs
+    #           uses: styfle/cancel-workflow-action@0.9.0
+    #           with:
+    #             access_token: ${{ github.token }}
+    #         - name: Checkout Github repo
+    #           uses: actions/checkout@v4
+    #         - name: Sets up an Erlang/OTP environment
+    #           uses: erlef/setup-beam@v1
+    #           with:
+    #             elixir-version: ${{ matrix.elixir }}
+    #             otp-version: ${{ matrix.otp }}
+    #         # - name: Retrieve cached dependencies
+    #         #   uses: actions/cache@v2
+    #         #   id: mix-cache
+    #         #   with:
+    #         #     path: |
+    #         #         deps
+    #         #         _build
+    #         #         priv/plts
+    #         #     key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-phoenix-${{ hashFiles('mix.lock') }}
+    #         - name: Install dependencies
+    #           # if: steps.mix-cache.outputs.cache-hit != 'true'
+    #           run: |
+    #             mkdir -p priv/plts
+    #             mix local.rebar --force
+    #             mix local.hex --force
+    #             mix deps.get
+    #             mix deps.compile
+    #             mix dialyzer --plt
     
     static-code-analysis:
-        needs: dependencies
+        # needs: dependencies
         runs-on: ubuntu-latest
         strategy:
           matrix:
@@ -92,21 +92,21 @@ jobs:
         #         _build
         #         priv/plts
         #     key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-phoenix-${{ hashFiles('mix.lock') }}
-        # - name: Install dependencies
-        #   # if: steps.mix-cache.outputs.cache-hit != 'true'
-        #   run: |
-        #       mkdir -p priv/plts
-        #       mix local.rebar --force
-        #       mix local.hex --force
-        #       mix deps.get
-        #       mix deps.compile
+        - name: Install dependencies
+          # if: steps.mix-cache.outputs.cache-hit != 'true'
+          run: |
+              mkdir -p priv/plts
+              mix local.rebar --force
+              mix local.hex --force
+              mix deps.get
+              mix deps.compile
         - run: mix format --check-formatted
         - run: mix credo
         - run: mix dialyzer --no-check --ignore-exit-status
     
     test:
         runs-on: ubuntu-latest
-        needs: dependencies
+        # needs: dependencies
         strategy:
           matrix:
             elixir: ['1.16.1']
@@ -139,14 +139,14 @@ jobs:
         #         _build
         #         priv/plts
         #     key: ${{ runner.os }}-${{ matrix.otp }}-${{ matrix.elixir }}-phoenix-${{ hashFiles('mix.lock') }}
-        # - name: Install dependencies
-        #   if: steps.mix-cache.outputs.cache-hit != 'true'
-        #   run: |
-        #     mkdir -p priv/plts
-        #     mix local.rebar --force
-        #     mix local.hex --force
-        #     mix deps.get
-        #     mix deps.compile
+        - name: Install dependencies
+          # if: steps.mix-cache.outputs.cache-hit != 'true'
+          run: |
+            mkdir -p priv/plts
+            mix local.rebar --force
+            mix local.hex --force
+            mix deps.get
+            mix deps.compile
         - run: mix test --trace --slowest 10
     build-publish:
         needs:
