--- a/.github/workflows/build-customer-os-realtime.yml
+++ b/.github/workflows/build-customer-os-realtime.yml
@@ -164,6 +164,8 @@ jobs:
 
             rsync -av --progress --exclude="tmp-sources" * tmp-sources/customer_os_realtime
 
+            cp rel/* tmp-sources/rel/
+
             cp Dockerfile tmp-sources/Dockerfile
 
         - name: Log in to the Container registry
