--- a/.github/workflows/build-customer-os-realtime.yml
+++ b/.github/workflows/build-customer-os-realtime.yml
@@ -157,16 +157,18 @@ jobs:
         - name: Checkout
           uses: actions/checkout@v4
 
-        - name: Prepare sources for docker build
-          run: |
-            mkdir tmp-sources
-            mkdir tmp-sources/customer_os_realtime
+        # - name: Prepare sources for docker build
+        #   run: |
+        #     mkdir tmp-sources
+        #     mkdir tmp-sources/customer_os_realtime
 
-            rsync -av --progress --exclude="tmp-sources" * tmp-sources/customer_os_realtime
+        #     rsync -av --progress --exclude="tmp-sources" * tmp-sources/customer_os_realtime
 
-            cp -r rel/* tmp-sources/rel/
+        #     cp -r config/* tmp-sources/config/
 
-            cp Dockerfile tmp-sources/Dockerfile
+        #     cp -r rel/* tmp-sources/rel/
+
+        #     cp Dockerfile tmp-sources/Dockerfile
 
         - name: Log in to the Container registry
           uses: docker/login-action@v3.0.0
@@ -184,7 +186,7 @@ jobs:
         - name: Push Docker image
           uses: docker/build-push-action@v5.1.0
           with:
-            context: packages/server/customer_os_realtime/tmp-sources/.
+            # context: packages/server/customer_os_realtime/tmp-sources/.
             push: ${{ github.ref_name == 'otter' || github.event_name == 'release' }}
             tags: ${{ steps.meta.outputs.tags }}
             labels: ${{ steps.meta.outputs.labels }}
