--- a/.github/workflows/build-customer-os-realtime.yml
+++ b/.github/workflows/build-customer-os-realtime.yml
@@ -186,7 +186,7 @@ jobs:
         - name: Push Docker image
           uses: docker/build-push-action@v5.1.0
           with:
-            # context: packages/server/customer_os_realtime/tmp-sources/.
+            context: packages/server/customer_os_realtime/
             push: ${{ github.ref_name == 'otter' || github.event_name == 'release' }}
             tags: ${{ steps.meta.outputs.tags }}
             labels: ${{ steps.meta.outputs.labels }}
