--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -66,6 +66,7 @@
     "react-date-picker": "^10.0.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.47.0",
+    "react-imask": "^7.4.0",
     "react-inverted-form": "^1.2.13",
     "react-lottie": "^1.2.4",
     "react-markdown": "^9.0.0",
