(fix|COS-2027): Tenant billing details new ui (integrate with BE) (#5658)

--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -67,6 +67,7 @@
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "7.47.0",
+    "react-imask": "^7.4.0",
     "react-inverted-form": "^1.2.13",
     "react-lottie": "^1.2.4",
     "react-markdown": "^9.0.0",
