--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -25,7 +25,6 @@
     "@dnd-kit/sortable": "^8.0.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@files-ui/react": "^1.2.4",
     "@growthbook/growthbook-react": "^0.21.0",
     "@highlight-run/next": "^7.0.1",
     "@integration-app/react": "^0.2.1",
@@ -50,7 +49,10 @@
     "dotenv": "^16.0.3",
     "encoding": "^0.1.13",
     "filepond": "^4.30.6",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.8",
     "filepond-plugin-image-preview": "^4.6.12",
+    "filepond-plugin-image-resize": "^2.0.10",
     "framer-motion": "^10.16.16",
     "fuse.js": "^6.6.2",
     "graphql": "^16.8.1",
