--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -42,11 +42,17 @@
     "axios": "^1.6.3",
     "bufferutil": "^4.0.8",
     "chakra-react-select": "^4.7.6",
+    "compressorjs": "^1.2.1",
     "d3": "^7.8.5",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
     "dotenv": "^16.0.3",
     "encoding": "^0.1.13",
+    "filepond": "^4.30.6",
+    "filepond-plugin-file-validate-size": "^2.2.8",
+    "filepond-plugin-file-validate-type": "^1.2.8",
+    "filepond-plugin-image-preview": "^4.6.12",
+    "filepond-plugin-image-resize": "^2.0.10",
     "framer-motion": "^10.16.16",
     "fuse.js": "^6.6.2",
     "graphql": "^16.8.1",
@@ -66,6 +72,7 @@
     "react-date-picker": "^10.0.3",
     "react-datepicker": "^6.1.0",
     "react-dom": "^18.2.0",
+    "react-filepond": "^7.1.2",
     "react-hook-form": "7.47.0",
     "react-imask": "^7.4.0",
     "react-inverted-form": "^1.2.13",
