feat: connect org view to org channels

--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -68,6 +68,7 @@
     "next": "13.5.6",
     "next-auth": "4.24.5",
     "next-pwa": "^5.6.0",
+    "phoenix": "^1.7.11",
     "react": "^18.2.0",
     "react-date-picker": "^10.0.3",
     "react-datepicker": "^6.1.0",
@@ -109,6 +110,7 @@
     "@types/jsonwebtoken": "^9.0.3",
     "@types/next": "9.0.0",
     "@types/node": "17.0.4",
+    "@types/phoenix": "^1.6.4",
     "@types/react": "18.0.28",
     "@types/react-datepicker": "^4.19.6",
     "@types/react-dom": "^18.0.10",
