--- a/.github/workflows/build-user-admin-api.yml
+++ b/.github/workflows/build-user-admin-api.yml
@@ -5,11 +5,15 @@ on:
     branches: [ "otter" ]
     paths:
       - packages/server/customer-os-common-module/**
+      - packages/server/customer-os-common-auth/**
+      - packages/server/events-processing-proto/**
       - packages/server/user-admin-api/**
       - .github/workflows/build-user-admin-api.yml
   pull_request:
     paths:
       - packages/server/customer-os-common-module/**
+      - packages/server/customer-os-common-auth/**
+      - packages/server/events-processing-proto/**
       - packages/server/user-admin-api/**
       - .github/workflows/build-user-admin-api.yml
   release:
@@ -77,6 +81,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: Prepare sources for docker build
+        run: |
+          mkdir tmp-sources
+          mkdir tmp-sources/customer-os-common-module
+          mkdir tmp-sources/events-processing-proto
+          mkdir tmp-sources/customer-os-common-auth
+          mkdir tmp-sources/user-admin-api
+          
+          rsync -av --progress --exclude="tmp-sources" * tmp-sources/user-admin-api
+          cp .env tmp-sources/user-admin-api/.env
+          cp -r ../customer-os-common-module/* tmp-sources/customer-os-common-module
+          cp -r ../customer-os-common-auth/* tmp-sources/customer-os-common-auth
+          cp -r ../events-processing-proto/* tmp-sources/events-processing-proto
+          
+          cp Dockerfile tmp-sources/Dockerfile
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
