--- a/.github/workflows/build-settings-api.yml
+++ b/.github/workflows/build-settings-api.yml
@@ -87,6 +87,7 @@ jobs:
           rsync -av --progress --exclude="tmp-sources" * tmp-sources/settings-api
           cp .env tmp-sources/settings-api/.env
           cp -r ../customer-os-common-module/* tmp-sources/customer-os-common-module
+          cp -r ../../server/customer-os-common-auth/* tmp-sources/customer-os-common-auth
 
           cp Dockerfile tmp-sources/Dockerfile
 
