--- a/.github/workflows/build-customer-os-data-upkeeper.yml
+++ b/.github/workflows/build-customer-os-data-upkeeper.yml
@@ -5,11 +5,15 @@ on:
     branches: [ "otter" ]
     paths:
       - packages/server/customer-os-common-module/**
+      - packages/server/customer-os-neo4j-repository/**
+      - packages/server/events-processing-proto/**
       - packages/runner/customer-os-data-upkeeper/**
       - .github/workflows/build-customer-os-data-upkeeper.yml
   pull_request:
     paths:
       - packages/server/customer-os-common-module/**
+      - packages/server/customer-os-neo4j-repository/**
+      - packages/server/events-processing-proto/**
       - packages/runner/customer-os-data-upkeeper/**
       - .github/workflows/build-customer-os-data-upkeeper.yml
   release:
@@ -100,6 +104,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Prepare sources for docker build
+        run: |
+          mkdir tmp-sources
+          mkdir tmp-sources/customer-os-common-module
+          mkdir tmp-sources/events-processing-proto
+          mkdir tmp-sources/customer-os-neo4j-repository
+          mkdir tmp-sources/customer-os-data-upkeeper
+
+          rsync -av --progress --exclude="tmp-sources" * tmp-sources/customer-os-data-upkeeper
+          cp .env tmp-sources/customer-os-data-upkeeper/.env
+          cp -r ../../server/customer-os-common-module/* tmp-sources/customer-os-common-module
+          cp -r ../../server/events-processing-proto/* tmp-sources/events-processing-proto
+          cp -r ../../server/customer-os-neo4j-repository/* tmp-sources/customer-os-neo4j-repository
+
+          cp Dockerfile tmp-sources/Dockerfile
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3.0.0
