--- a/packages/runner/customer-os-data-upkeeper/Dockerfile
+++ b/packages/runner/customer-os-data-upkeeper/Dockerfile
@@ -30,8 +30,8 @@ COPY customer-os-neo4j-repository/. /workspace/packages/server/customer-os-neo4j
 RUN cd /workspace/packages/server/customer-os-neo4j-repository && go build
 
 #copy and build customer-os-data-upkeeper
-COPY sync-gmail-raw/go.mod /workspace/packages/runner/customer-os-data-upkeeper/go.mod
-COPY sync-gmail-raw/go.sum /workspace/packages/runner/customer-os-data-upkeeper/go.sum
+COPY customer-os-data-upkeeper/go.mod /workspace/packages/runner/customer-os-data-upkeeper/go.mod
+COPY customer-os-data-upkeeper/go.sum /workspace/packages/runner/customer-os-data-upkeeper/go.sum
 RUN cd /workspace/packages/runner/customer-os-data-upkeeper && go mod download && go mod verify
 
 COPY customer-os-data-upkeeper/. /workspace/packages/runner/customer-os-data-upkeeper/
