--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -88,6 +88,7 @@
     "rxjs": "^7.8.1",
     "sanitize-html": "^2.9.0",
     "sass": "^1.69.5",
+    "sharp": "^0.33.2",
     "slack-to-html": "^1.0.0",
     "ts-pattern": "^5.0.5",
     "usehooks-ts": "^2.9.1",
