add caching to cos-api

--- a/packages/server/customer-os-api/Dockerfile
+++ b/packages/server/customer-os-api/Dockerfile
@@ -45,7 +45,8 @@ RUN cd /workspace/build/customer-os-api && go mod download && go mod verify
 
 COPY customer-os-api/. /workspace/build/customer-os-api/
 
-RUN cd /workspace/build/customer-os-api && go build -v -o /go/bin/app
+ENV GOCACHE=/root/.cache/go-build 
+RUN --mount=type=cache,target="/root/.cache/go-build" cd /workspace/build/customer-os-api && go build -v -o /go/bin/app
 
 FROM alpine:3.14@sha256:0f2d5c38dd7a4f4f733e688e3a6733cb5ab1ac6e3cb4603a5dd564e5bfb80eed
 
