--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -23,7 +23,7 @@
     "@chakra-ui/react": "^2.7.1",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@growthbook/growthbook-react": "^0.21.0",
     "@highlight-run/next": "^7.0.1",
@@ -34,8 +34,10 @@
     "@remirror/pm": "^2.0.8",
     "@remirror/react": "^2.0.27",
     "@stylistic/eslint-plugin-js": "^1.0.0",
+    "@tanstack/query-persist-client-core": "^5.24.1",
+    "@tanstack/query-sync-storage-persister": "^5.24.1",
     "@tanstack/react-query": "^5.17.10",
-    "@tanstack/react-query-persist-client": "^5.8.1",
+    "@tanstack/react-query-persist-client": "^5.24.1",
     "@tanstack/react-table": "^8.10.3",
     "@tanstack/react-virtual": "^3.0.1",
     "@visx/visx": "^3.5.1",
@@ -65,6 +67,7 @@
     "linkify-html": "^4.1.0",
     "linkifyjs": "^4.1.0",
     "lodash": "^4.17.21",
+    "lz-string": "^1.5.0",
     "next": "13.5.6",
     "next-auth": "4.24.5",
     "next-pwa": "^5.6.0",
