Fix webhook payload serialization with temporal

--- a/packages/server/events-processing-platform/.env
+++ b/packages/server/events-processing-platform/.env
@@ -120,3 +120,7 @@ ANTHROPIC_API: https://anthropic.openline.ai
 ANTHROPIC_API_KEY: SOME_API_KEY
 
 POSTMARK_API_KEY:
+
+TEMPORAL_HOSTPORT: localhost:7233
+TEMPORAL_NAMESPACE: default
+TEMPORAL_RUN_WORKER: true
