Skip SLI with 0 quantity from invoices

--- a/packages/server/events-processing-platform/.env
+++ b/packages/server/events-processing-platform/.env
@@ -123,4 +123,4 @@ POSTMARK_API_KEY:
 
 TEMPORAL_HOSTPORT: localhost:7233
 TEMPORAL_NAMESPACE: default
-TEMPORAL_RUN_WORKER: true
+TEMPORAL_RUN_WORKER: false
