wip: new Button

--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -44,6 +44,7 @@
     "axios": "^1.6.4",
     "bufferutil": "^4.0.8",
     "chakra-react-select": "^4.7.6",
+    "class-variance-authority": "^0.7.0",
     "compressorjs": "^1.2.1",
     "d3": "^7.8.5",
     "date-fns": "^2.29.3",
@@ -122,6 +123,7 @@
     "@types/react-lottie": "^1.2.10",
     "@types/sanitize-html": "^2.8.0",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "autoprefixer": "^10.4.18",
     "env-cmd": "^10.1.0",
     "eslint": "^8.33.0",
     "eslint-config-next": "^13.1.6",
@@ -133,8 +135,11 @@
     "js-cookie": "^3.0.5",
     "lint-staged": "^13.1.1",
     "msw": "^1.2.1",
+    "postcss": "^8.4.35",
     "prettier": "^2.8.4",
     "react-devtools": "^4.27.2",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.0.4"
   },
