[COS-2189] - Enhance FileStore API to support CDN

--- a/packages/server/file-store-api/.env
+++ b/packages/server/file-store-api/.env
@@ -27,3 +27,7 @@ CUSTOMER_OS_API: http://localhost:10000/query
 CUSTOMER_OS_API_KEY: dd9d2474-b4a9-4799-b96f-73cd0a2917e4
 
 FILE_STORE_API_JWT_SECRET: 224ca5f5-7737-4fd6-a892-ddd40d7a7b0d
+
+CLOUDFLARE_IMAGE_UPLOAD_ACCOUNT_ID:
+CLOUDFLARE_IMAGE_UPLOAD_API_KEY:
+CLOUDFLARE_IMAGE_UPLOAD_SIGN_KEY:
