--- a/packages/server/file-store-api/Makefile
+++ b/packages/server/file-store-api/Makefile
@@ -1,5 +1,5 @@
 generate:
-	#export PATH="${PATH}:$(shell go env GOPATH)/bin";go generate ./...
+	export PATH="${PATH}:$(shell go env GOPATH)/bin";go generate ./...
 
 clean:
 	rm -rf bin
@@ -16,8 +16,4 @@ build: bin/file-store-api test/graph/generated/generated.go
 bin/file-store-api:
 	go build -v -o bin/file-store-api
 
-install:
-	go install gotest.tools/gotestsum@latest
-	go get github.com/99designs/gqlgen@v0.17.43
-
-all: install build
+all: clean build
