--- a/.github/workflows/build-customer-os-api.yml
+++ b/.github/workflows/build-customer-os-api.yml
@@ -2,7 +2,7 @@ name: customer-os-api
 
 on:
   push:
-    branches: [ "otter" ]
+    branches: [ "otter", "alex/cos-2373-remove-deprecated-sli-grpaphql-properties" ]
     paths:
       - packages/server/customer-os-common-module/**
       - packages/server/customer-os-neo4j-repository/**
