[COS-2189] - Enhance FileStore API to support CDN (#6043)

--- a/packages/server/file-store-api/Makefile
+++ b/packages/server/file-store-api/Makefile
@@ -1,5 +1,8 @@
+run: build
+	go run main.go
+
 generate:
-	#export PATH="${PATH}:$(shell go env GOPATH)/bin";go generate ./...
+	export PATH="${PATH}:$(shell go env GOPATH)/bin";go generate ./...
 
 clean:
 	rm -rf bin
@@ -18,6 +21,5 @@ bin/file-store-api:
 
 install:
 	go install gotest.tools/gotestsum@latest
-	go get github.com/99designs/gqlgen@v0.17.43
 
-all: install build
+all: clean install build
