--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -26,7 +26,7 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@growthbook/growthbook-react": "^0.21.0",
-    "@highlight-run/next": "^7.2.5",
+    "@highlight-run/next": "^7.4.0",
     "@integration-app/react": "^0.2.1",
     "@next/bundle-analyzer": "^13.5.3",
     "@novu/notification-center": "^0.22.0",
@@ -130,6 +130,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "is-ci": "^3.0.1",
     "jest": "^29.7.0",
+    "js-cookie": "^3.0.5",
     "lint-staged": "^13.1.1",
     "msw": "^1.2.1",
     "prettier": "^2.8.4",
