--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "build:cluster": "env-cmd -f .env.cluster next build",
     "start": "next start",
+    "codegen:variants": "ts-node ui/form/Button/codegen-buttonVariantsGen",
     "codegen:graphql": "graphql-codegen --require dotenv/config --config scripts/codegen-graphql.ts",
     "codegen:icons": "node scripts/codegen-icons.js",
     "codegen:logos": "node scripts/codegen-logos.js",
@@ -142,6 +143,7 @@
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.0.4"
   },
   "resolutions": {
