--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "build:cluster": "env-cmd -f .env.cluster next build",
     "start": "next start",
-    "codegen:variants": "ts-node ui/form/Button/codegen-buttonVariantsGen",
+    "codegen:variants": "ts-node scripts/codegen-tw-variants.ts",
     "codegen:graphql": "graphql-codegen --require dotenv/config --config scripts/codegen-graphql.ts",
     "codegen:icons": "node scripts/codegen-icons.js",
     "codegen:logos": "node scripts/codegen-logos.js",
@@ -132,6 +132,7 @@
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-perfectionist": "^2.2.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "glob": "^10.3.10",
     "is-ci": "^3.0.1",
     "jest": "^29.7.0",
     "js-cookie": "^3.0.5",
