--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -20,6 +20,7 @@
     "postinstall": "node scripts/setup-precommit-hook"
   },
   "dependencies": {
+    "@ark-ui/react": "^2.2.3",
     "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.7.1",
     "@dnd-kit/core": "^6.1.0",
@@ -143,6 +144,7 @@
     "react-devtools": "^4.27.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
+    "tailwindcss-animate": "^1.0.7",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.0.4"
