--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -20,6 +20,7 @@
     "postinstall": "node scripts/setup-precommit-hook"
   },
   "dependencies": {
+    "@ark-ui/react": "^2.2.3",
     "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.7.1",
     "@dnd-kit/core": "^6.1.0",
