feat:create new Avatar Component

--- a/packages/apps/spaces/package.json
+++ b/packages/apps/spaces/package.json
@@ -31,6 +31,7 @@
     "@integration-app/react": "^0.2.1",
     "@next/bundle-analyzer": "^13.5.3",
     "@novu/notification-center": "^0.22.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@react-spring/web": "^9.7.3",
     "@remirror/pm": "^2.0.8",
     "@remirror/react": "^2.0.27",
