Fix env file loading

--- a/packages/server/settings-api/Dockerfile
+++ b/packages/server/settings-api/Dockerfile
@@ -35,6 +35,7 @@ RUN cd /workspace/build/settings-api && go build -v -o /go/bin/app
 
 FROM alpine:3.14@sha256:0f2d5c38dd7a4f4f733e688e3a6733cb5ab1ac6e3cb4603a5dd564e5bfb80eed
 COPY --chown=65534:65534 --from=builder /go/bin/app .
+COPY --chown=65534:65534 --from=builder /workspace/build/settings-api/.env .env
 USER 65534
 
 ENTRYPOINT [ "./app" ]
