--- a/packages/server/comms-api/Dockerfile
+++ b/packages/server/comms-api/Dockerfile
@@ -12,6 +12,7 @@ RUN go build -o bin/comms-api
 FROM alpine:3.14@sha256:0f2d5c38dd7a4f4f733e688e3a6733cb5ab1ac6e3cb4603a5dd564e5bfb80eed
 
 COPY --chown=65534:65534 --from=builder /app/comms-api/bin/comms-api .
+COPY --chown=65534:65534 --from=builder /app/comms-api/.env .env
 USER 65534
 
 ENTRYPOINT [ "./comms-api" ]
