--- a/packages/runner/sync-slack/.env
+++ b/packages/runner/sync-slack/.env
@@ -1,6 +1,6 @@
 NEO4J_TARGET: neo4j://127.0.0.1:7687
 NEO4J_AUTH_USER: neo4j
-NEO4J_AUTH_PWD: StrongLocalPa$$
+NEO4J_AUTH_PWD: password
 NEO4J_AUTH_REALM:
 NEO4J_MAX_CONN_POOL_SIZE: 100
 # valid log values (ERROR, WARNING, INFO, DEBUG)
