--- a/packages/server/validation-api/.env
+++ b/packages/server/validation-api/.env
@@ -18,7 +18,7 @@ POSTGRES_LOG_LEVEL: INFO
 
 NEO4J_TARGET: neo4j://127.0.0.1:7687
 NEO4J_AUTH_USER: neo4j
-NEO4J_AUTH_PWD: StrongLocalPa$$
+NEO4J_AUTH_PWD: password
 NEO4J_AUTH_REALM:
 NEO4J_MAX_CONN_POOL_SIZE: 200
 NEO4J_CONN_ACQUISITION_TIMEOUT_SEC: 60
