init tracing in file-store-api

--- a/packages/server/file-store-api/.env
+++ b/packages/server/file-store-api/.env
@@ -31,3 +31,11 @@ FILE_STORE_API_JWT_SECRET: 224ca5f5-7737-4fd6-a892-ddd40d7a7b0d
 CLOUDFLARE_IMAGE_UPLOAD_ACCOUNT_ID:
 CLOUDFLARE_IMAGE_UPLOAD_API_KEY:
 CLOUDFLARE_IMAGE_UPLOAD_SIGN_KEY:
+
+JAEGER_ENABLED: true
+JAEGER_SERVICE_NAME: file-store-api
+JAEGER_AGENT_HOST: localhost
+JAEGER_AGENT_PORT: 6831
+JAEGER_SAMPLER_TYPE: probabilistic
+JAEGER_SAMPLER_PARAM: 1
+JAEGER_REPORTER_LOG_SPANS: false
