fix: empty state, no results state, missing skeletons & other bugs for invoices tables

--- a/packages/apps/spaces/tsconfig.json
+++ b/packages/apps/spaces/tsconfig.json
@@ -21,6 +21,7 @@
       "@ui/*": ["ui/*"],
       "@spaces/utils/*": ["utils/*"],
       "@shared/components/*": ["app/src/components/*"],
+      "@shared/assets/*": ["app/src/assets/*"],
       "@shared/util/*": ["app/src/util/*"],
       "@shared/types/*": ["app/src/types/*"],
       "@shared/hooks/*": ["app/src/hooks/*"],
